[project]
name = "med-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "mcp[cli]>=1.14.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
]
